# object-oriented-bell-violation

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/physics/: particles.py
src/physics/dashboards/: bell_violation.py
