[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physics"
version = "0.1.0"
description = "Coding takeaway challenge for data-physicist role at EPR"
dependencies = [
    "streamlit",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
